# iceberg-cxx

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  test-validator.sh
iceberg/: CMakeLists.txt  avro_manifest_entry_reader.cpp  avro_manifest_entry_reader.h  avro_schema.cpp  avro_schema.h  catalog.h  deletion_vector.cpp  deletion_vector.h  experimental_representations.cpp  experimental_representations.h  hash_utils.h  literals.cpp  literals.h  manifest_entry.cpp  manifest_entry.h  manifest_entry_stats_getter.cpp  manifest_entry_stats_getter.h  manifest_file.h  myavro.cpp  myavro.h  nested_field.h  order.h  puffin.cpp  puffin.h  result.h  schema.cpp  schema.h  sql_catalog.cpp  sql_catalog.h  table.h  table_metadata.cpp  table_metadata.h  tea_hive_catalog.cpp  tea_hive_catalog.h  tea_manifest_metadata.cpp  tea_nessie_catalog.cpp  tea_nessie_catalog.h  tea_remote_catalog.cpp  tea_remote_catalog.h  tea_rest_catalog.cpp  (+15 more)
iceberg/common/: CMakeLists.txt  batch.h  defer.h  error.h  json_parse.cpp  json_parse.h  logger.h  rg_metadata.cpp  rg_metadata.h  selection_vector.h  threadpool.h
iceberg/common/fs/: CMakeLists.txt  file_reader_provider.h  file_reader_provider_impl.h  filesystem_provider.h  filesystem_provider_impl.h  filesystem_wrapper.h  s3.cpp  s3.h  url.cpp  url.h
iceberg/common/ut/: threadpool_test.cpp
iceberg/equality_delete/: CMakeLists.txt  common.cpp  common.h  delete.cpp  delete.h  generic_delete.cpp  generic_delete.h  handler.cpp  handler.h  specialized_multiple_column_delete.h  specialized_one_column_delete.h  stats.h  utils.h
iceberg/equality_delete/ut/: allocator_test.cpp  equality_delete_test.cpp  generic_delete_test.cpp  specialized_delete_test.cpp
iceberg/examples/: CMakeLists.txt  hive_metastore_client.cpp  hive_metastore_server.cpp
iceberg/filter/: CMakeLists.txt
iceberg/filter/representation/: CMakeLists.txt  column_extractor.h  function.h  node.h  serializer.cpp  serializer.h  tree_rewriter.cpp  tree_rewriter.h  value.cpp  value.h  visitor.h
iceberg/filter/row_filter/: CMakeLists.txt  arrow_types.cpp  arrow_types.h  registry.cpp  registry.h  row_filter.cpp  row_filter.h
iceberg/filter/stats_filter/: CMakeLists.txt  registry.cpp  registry.h  stats.h  stats_filter.cpp  stats_filter.h
iceberg/json/: rapid_yyjson.h
iceberg/parquet/: CMakeLists.txt  io.cpp  io.h
iceberg/positional_delete/: CMakeLists.txt  positional_delete.cpp  positional_delete.h  stats.h
iceberg/positional_delete/ut/: positional_delete_test.cpp  rowgroup_filter_test.cpp
iceberg/src/: CMakeLists.txt  catalog.h  field.h  hive_client.cpp  hive_client.h  json.cpp  json.h  manifest_entry.cpp  manifest_entry.h  manifest_entry_schema.h  manifest_file.h  manifest_metadata.cpp  manifest_metadata.h  metadata.cpp  metadata.h  nested_field.h  scan.cpp  scan.h  schema.cpp  schema.h  snapshot.h  table.h  table_metadata.cpp  table_metadata.h  tea_hive_catalog.cpp  tea_hive_catalog.h  tea_manifest_metadata.cpp  tea_scan.cpp  tea_scan.h  type.cpp  type.h
iceberg/streams/: CMakeLists.txt  main.cpp
iceberg/streams/arrow/: batch_with_row_number.h  file_reader.h  projection_stream.h  row_group_reader.h  stream.h
iceberg/streams/compute/: CMakeLists.txt  projection.cpp  projection.h  ssa_program.cpp  ssa_program.h
iceberg/streams/filter/: row_filter.h
iceberg/streams/iceberg/: CMakeLists.txt  builder.h  data_entries_meta_stream.h  data_scan.h  plan.h  (+18 more)
iceberg/test_utils/: CMakeLists.txt  arrow_array.cpp  arrow_array.h  assertions.h  column.cpp  column.h  common.h  metadata_writer.h  optional_vector.h  scoped_temp_dir.cpp  scoped_temp_dir.h  write.cpp  write.h
iceberg/tests/: CMakeLists.txt  hive_client_test.cpp  manifest_entry_test.cpp  manifest_metadata_test.cpp  run_tests.cpp  scan_test.cpp  table_metadata_test.cpp  test.cpp
iceberg/tools/: CMakeLists.txt  common.cpp  common.h  fix_location.cpp  hive_metastore_client.cpp  hive_metastore_server.cpp  ls.cpp  lsice.cpp  metadata_tree.cpp  metadata_tree.h  metastore_client.h  s3client.h
iceberg/ut/: manifest_entry_stats_getter_test.cpp  puffin_test.cpp
stats/: CMakeLists.txt  analyzer.cpp  analyzer.h  data.h  main.cpp  measure.h  puffin.cpp  puffin.h  types.h
stats/datasketch/: dictionary_serializer.h  distinct.h  distinct_hll.h  distinct_naive.h  distinct_theta.h  frequent_items.h  quantiles.h  string_view_serializer.h
stats/parquet/: distinct.h  frequent_item.h  quantiles.h  sketch.h  sketch_updater.h  values_provider.h
stats/tests/: prepare.sh  run.sh
stats/ut/: analyzer_test.cpp  sketch_test.cpp
tests/: CMakeLists.txt  deletion_vector_test.cpp  hive_client_test.cpp  manifest_entry_test.cpp  manifest_metadata_test.cpp  puffin_footer_test.cpp  referenced_data_file_test.cpp  run_tests.cpp  scan_test.cpp  schema_validation_test.cpp  snapshot_test.cpp  streams_test.cpp  table_metadata_test.cpp  tea_scan_test.cpp  validation_test.cpp
tests/compat/: partitions_test.cpp  transforms_test.cpp
tests/data/: 00000-7-d4e36f4d-a2c0-467d-90e7-0ef1a54e2724-0-00002.parquet
tests/meta_perf/: README.md  docker-compose.yml  run_performance_tests.cpp  s3.env
tests/metadata/: 02ce7cec-31fd-4de7-8811-02ce7cec44a9-m0.avro  broken1.avro  broken1.metadata.json  broken2.avro  broken2.metadata.json  snap-2dfe8bdb-200b-1006-9bb5-0242ac110002.avro
tests/nessie/: test_nessie_catalog.cpp
tests/performance_gen/: CMakeLists.txt  docker-compose.yml  gen_manifest_files.cpp  gen_performance.sh  run_performance_tests.cpp
tests/rest/: setup_lakekeeper.sql  test_rest_catalog.cpp
tests/warehouse/: MockMetadata.json  MockMetadataWithFixed.json  MockMetadataWithListOfLists.json  SchemaWithDefaults.json  restrictions.json  restrictionsBad.json  restrictionsNotFull.json
tools/: CMakeLists.txt  common.cpp  common.h  explorer.cpp  fix_location.cpp  hive_metastore_client.cpp  hive_metastore_client.h  hive_metastore_server.cpp  hive_metastore_server.h  ls.cpp  make_metadata.cpp  metadata_tree.cpp  metadata_tree.h  metastore_client.h  s3client.h  validation.cpp  validation.h  validator_tool.cpp
(+389 files in other folders)
